<resources>
    <string name="settings">Settings</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="add_club">Add club</string>
    <string name="add_match">Add match</string>
    <string name="leagues">Leagues</string>
    <string name="item_selected">items selected</string>
    <string name="toast">You must select only one item to modify it</string>
    <string name="name">Name</string>
    <string name="league">League</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="language">Language</string>
    <string name="night_mode">Night Mode</string>
    <string name="club_home">Club Home</string>
    <string name="club_visitor">Club Visitor</string>
    <string name="score">Score</string>

    <string name="club_name">Club Name</string>
    <string name="wins">Wins</string>
    <string name="loses">Losses</string>
    <string name="draws">Draws</string>
    <string name="points">Points</string>
    <string name="error_addclub">Please enter a club name</string>
    <string name="app_name">Project_LeaderBoard</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="club_deleted">Club(s) deleted</string>
    <string name="club_created">Club created</string>
    <string name="match_created">Match created</string>
    <string name="match_error">A club cannot play against himself</string>
    <string name="match_edited">Match edited</string>
    <string name="match_updated">Match updated</string>
    <string name="club_updated">Club updated</string>
    <string name="action_error">Something went wrong</string>
    <string name="notEnoughItems">You have to select at least one item</string>
    <string name="tooMuchItems">You must select only one item to modify it</string>

    <!--string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Leaderboard</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>



    <string name="menu_league">Leagues</string>
    <string name="menu_club">Add Club</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_match">Add match</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="toast_text">Match added </string>
    <string name="action_delete">Delete</string>
    <string name="delete_msg">Do you really want to delete this match?</string>
    <string name="club_edited">Club edited</string>


    <string name="action_edit">Edit</string>
    <string name="action_create_club">Create Club</string-->


    <string-array name="language">
        <item>Français</item>
        <item>English</item>
    </string-array>

    <string-array name="league">
        <item>Bundesliga</item>
        <item>Premier League</item>
        <item>Serie A</item>
        <item>Ligue 1</item>


    </string-array>

    <string-array name="query_suggestions">
        <item>Arsenal</item>
        <item>Manchester United</item>
        <item>Serie A</item>

    </string-array>

    <string-array name="clubs_seria">
        <item>Juventus</item>
        <item>Lazio</item>
        <item>Inter</item>
        <item>Atalanta</item>
        <item>Roma</item>
        <item>Naples</item>
        <item>Milan</item>
        <item>Hellas Vérone</item>
        <item>Parme</item>
        <item>Bologne</item>
        <item>Sassuolo</item>
        <item>Cagliari</item>
        <item>Fiorentina</item>
        <item>Udinese</item>
        <item>Torino</item>
        <item>Sampdoria</item>
        <item>Genoa</item>
        <item>Lecce</item>
        <item>SPAL 2013</item>
        <item>Brescia</item>
    </string-array>


    <string-array name="clubs_ligue1">
        <item>Paris-SG</item>
        <item>Marseille</item>
        <item>Rennes</item>
        <item>Lille</item>
        <item>Reims</item>
        <item>Nice</item>
        <item>Lyon</item>
        <item>Montpellier</item>
        <item>Monaco</item>
        <item>Angers</item>
        <item>Strasbourg</item>
        <item>Bordeaux</item>
        <item>Nantes</item>
        <item>Brest</item>
        <item>Metz</item>
        <item>Dijon</item>
        <item>Saint-Etienne</item>
        <item>Nîmes</item>
        <item>Amiens</item>
        <item>Toulouse</item>
    </string-array>


    <string-array name="clubs_budesliga">
        <item>Bayern</item>
        <item>Dortmund</item>
        <item>Leipzig</item>
        <item>Leverkusen</item>
        <item>Möchengladbach</item>
        <item>Schalke</item>
        <item>Wolfsbourg</item>
        <item>Fribourg</item>
        <item>Hoffenheim</item>
        <item>Cologne</item>
        <item>Union Berlin</item>
        <item>Eintracht</item>
        <item>Herta BSC</item>
        <item>Augsbourg</item>
        <item>Mainz 05</item>
        <item>Düsseldorf</item>
        <item>Werder</item>
        <item>Padeborn 07</item>
    </string-array>


    <string-array name="clubs_premierLeague">
        <item>Arsenal</item>
        <item>Cheslea</item>
        <item>Liverpool</item>
        <item>Tottenham</item>
        <item>Manchester United</item>
        <item>Leicester</item>
        <item>Wolves</item>
        <item>Sheffield United</item>
        <item>Burnley</item>
        <item>Crystal Palace</item>
        <item>Everton</item>
        <item>Newcastle</item>
        <item>Southampton</item>
        <item>Brighton</item>
        <item>West Ham</item>
        <item>Watford</item>
        <item>Bournemouth</item>
        <item>Aston Villa</item>
        <item>Norwich</item>
    </string-array>




    <item name="menu_search" type="id" />
</resources>