<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/leader_clubs"
    android:fitsSystemWindows="true"
    android:background="?attr/backgroundcolor">

    <TextView
        android:id="@+id/league_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="TextView"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/tintcolor"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/button_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ListView
        android:id="@+id/leaderboard_clubs"
        android:layout_width="409dp"
        android:layout_height="678dp"
        android:layout_marginTop="50dp"
        android:longClickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/league_name" />


    <ImageButton
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:src="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/club_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/leaderboard_clubs"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="?attr/textcolor"/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="135dp"
        android:layout_marginRight="135dp"
        android:text="@string/points"
        android:textColor="?attr/textcolor"
        app:layout_constraintBottom_toTopOf="@+id/leaderboard_clubs"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/wins"
        app:layout_constraintBottom_toBottomOf="@+id/textView13"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        android:textColor="?attr/textcolor"/>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/loses"
        app:layout_constraintBottom_toTopOf="@+id/leaderboard_clubs"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        android:textColor="?attr/textcolor"/>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/draws"
        app:layout_constraintBottom_toTopOf="@+id/leaderboard_clubs"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        android:textColor="?attr/textcolor"/>
</androidx.constraintlayout.widget.ConstraintLayout>

